fixed alignment of buttons in new game / existing game dialog

--- a/brawl_frontend/css/styles.css
+++ b/brawl_frontend/css/styles.css
@@ -107,7 +107,6 @@ div {
 .game-choice {
   left: 40px;
   margin-right: 20px;
-  margin-top: 100px;
   width: 200px;
   height: 150px;
 }
